Z-Index Fixes

--- a/cherry/components/startingScreen/startingScreen.css
+++ b/cherry/components/startingScreen/startingScreen.css
@@ -98,7 +98,7 @@
     opacity: 0;
     transition: opacity 0.1s;
     touch-action: manipulation;
-    z-index: 1000000;
+    z-index: 100000;
 }
 
 .top-left {
